--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body > h2 {
     color:#e94e77;
 }
 
+#main {
+    display: flex;
+    justify-content: space-around;
+}
+
 /*HERE IS THE HEADER */
 header{
     padding: 5px;
@@ -20,27 +25,76 @@ header{
 /*TOP NAVIGATION BAR*/
 #top-nav-bar > ul {
     display: flex;
-    list-style: none;
-    text-decoration: none;
+    justify-content: space-around;
     background-color: #c6a49a;
-    
     margin:0px;
+    height: 30px;
+}
+
+#top-nav-bar > ul >li{
+    list-style: none;
+}
+
+#top-nav-bar > ul > li > a{
+    display: block;
+    color: #c6e5d9;
+    text-decoration: none; 
+    margin: 3px;
 }
 
 /*BOTTOM NAVIGATION BAR*/
 #bottom-nav-bar > ul {
-    list-style: none;
-    text-decoration: none;
+    display: flex;
+    justify-content: space-around;
     background-color: #c6a49a;
     margin:0px;
 }
 
-/*FILTERS HERE*/
-#filters > section >h4{
-    color: #e94e77;
+#bottom-nav-bar > ul > div >li{
+    list-style: none;
+    text-decoration: none;
+    color: #c6e5d9; 
 }
-#filters > section > nav > ul > li{
+
+#bottom-nav-bar > ul > div > li> a{
+    color: #c6e5d9;
+    text-decoration: none; 
+    justify-content:space-around;
+}
+
+/*FILTERS HERE*/
+#filters {
+    width: 100%; 
+    box-sizing: border-box; 
+}
+
+#filters > section {
+    width: 100%; 
+    margin-bottom: 1rem; 
+}
+
+#filters > section > h4 {
+    color: #e94e77;
+    margin-bottom: 0.5rem;
+}
+
+#filters > section > nav > ul {
+    padding: 0; 
+    margin: 0; 
+}
+
+#filters > section > nav > ul > li {
     color: #d68189;
+    margin-bottom: 0.5vh; 
+}
+
+#filters > section > nav > ul > li > a:hover {
+    text-decoration: underline; 
+}
+
+#filters > section > nav > ul > li > a {
+    text-decoration: none;
+    color: #d68189; 
 }
 
 /*HERE IS THE INTRODUCTION SECTION*/
@@ -59,6 +113,7 @@ header{
 #news {
     width: 80%;
     margin: 0 auto;
+    justify-content: space-around;
 }
 #stories{
     display: flex;
@@ -69,10 +124,25 @@ header{
 
 #news > h2{
     color:#e94e77;
+    text-align: center;
 }
 
 #stories > article > p{
     color:#d68189;
+    justify-content: space-between;
+}
+
+#FakeArt > img{
+    width: 78%;
+    margin: auto;
+    border-radius: 7%;
+    margin-left: 0.5rem;
+}
+
+#TimmyTommy > img{
+    width: 90%;
+    margin: auto;
+    border-radius: 7%;
 }
 
 /*HERE IS THE VILLAGERS SECTION*/
@@ -92,26 +162,42 @@ header{
 }
 
 #villagers-buttons {
-    display: flex;
+    display: block;
     display: grid;
     margin: auto;
     width: 30%;
     grid-template-columns: repeat(2, 1fr);
 }
 
-#villagers-buttons a {
-    display: block; 
+#OpenPopupLinkBlanche {
+    margin: auto;
+    margin-bottom: 1rem;
+}
+#OpenPopupLinkBlathers {
+    margin: auto;
+    margin-bottom: 1rem;
+}
+#OpenPopupLinkKatt {
+    margin: auto;
+}
+#OpenPopupLinkTom {
+    margin: auto;
 }
 
-
-
+/*HERES THE FORM SECTION*/
 #form > h4{
     color:#e94e77;
+    text-align: center;
+}
+body > h2{
+    text-align: center;
 }
 
 #form{
     color:#d68189;
+    text-align: center;
 }
+
 /*HOVER OVER VILLAGERS */
 .hover-enlarge {
     transition: transform 0.3s ease; 
@@ -129,4 +215,3 @@ body > footer{
     color: #c6e5d9 ;
     text-align: center;
 }
-
